--- a/TermProject/app/src/main/res/layout/activity_record.xml
+++ b/TermProject/app/src/main/res/layout/activity_record.xml
@@ -1,86 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="my.mobile.com.termproject.MainActivity"
     android:orientation="vertical"
-    android:background="@mipmap/back"
-    android:padding="20dp">
-
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@mipmap/back">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="50dp"
+        android:background="#ceb0e7">
         <TextView
-            android:id="@+id/tv01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="o 카테고리를 체크해주세요"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="목표 설정"
+            android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            />
+            android:textStyle="bold"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Spinner
-            android:id="@+id/spinner1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/category"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="o 구체적으로 무엇을 하였나요?\n (30자 내외)"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
-        <EditText
-            android:id="@+id/edit01"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="7dp"
-            android:background="@drawable/drawp"
-            android:padding="10dp"
-            android:gravity="start"
-            android:textColor="#000000"/>
-    </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom">
-        <Button
-            android:id="@+id/photo_btn"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="사진 찍기"/>
-        <Button
-            android:id="@+id/save_btn"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/record_btn_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="한 일"
+                android:textSize="20dp"
+                android:textColor="#76a3d9"
+                android:onClick="rOnclick"
+                />
+            <Button
+                android:id="@+id/record_btn_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="이벤트"
+                android:textSize="20dp"
+                android:textColor="#76a3d9"
+                android:onClick="rOnclick"/>
+            </LinearLayout>
+        <LinearLayout
+            android:id="@+id/record_linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="저장하기"/>
-        <Button
-            android:id="@+id/showmap_btn"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="맵으로 보여주기"/>
-
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="bottom">
+            <Button
+                android:id="@+id/photo_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="사진 찍기"/>
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="저장하기"/>
+            <Button
+                android:id="@+id/showmap_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="맵으로"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
+
+
+
