--- a/TermProject/app/src/main/res/layout/activity_splash.xml
+++ b/TermProject/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,18 @@
     android:layout_height="match_parent"
     android:background="#b88ada">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="My Life Logger"
+        android:textSize="30dp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"/>
+
     <ImageView
         android:id="@+id/ivsplash"
         android:layout_width="400dp"
