Third Version reviewboard 참고(11.25)

--- a/TermProject/app/src/main/res/layout/activity_goal.xml
+++ b/TermProject/app/src/main/res/layout/activity_goal.xml
@@ -23,7 +23,190 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="1">
-
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="1. 공부는 몇시간 할건가요?"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+            <RadioGroup
+                android:id="@+id/radio_study"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <RadioButton
+                    android:id="@+id/radio_study_btn1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_study_btn2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_study_btn3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_study_btn4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4시간 이상"
+                    android:textColor="#000000"/>
+            </RadioGroup>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2. 운동은 얼마나 할건가요?"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+            <RadioGroup
+                android:id="@+id/radio_health"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <RadioButton
+                    android:id="@+id/radio_health_btn1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30분"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_health_btn2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_health_btn3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1시간 30분"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_health_btn4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2시간 이상"
+                    android:textColor="#000000"/>
+            </RadioGroup>>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="3. 담배와 술은 어느정도나 할건가요?"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+            <RadioGroup
+                android:id="@+id/radio_cb"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <RadioButton
+                    android:id="@+id/radio_cb_btn1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="안할래요"
+                    android:textColor="#000000"
+                    />
+                <RadioButton
+                    android:id="@+id/radio_cb_btn2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="살짝만"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_cb_btn3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="적당히"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_cb_btn4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="미친듯이"
+                    android:textColor="#000000"/>
+            </RadioGroup>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="4. 잠은 몇시간 잘건가요?"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+            <RadioGroup
+                android:id="@+id/radio_sleep"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <RadioButton
+                    android:id="@+id/radio_sleep_btn1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5시간 이하"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_sleep_btn2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="6시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_sleep_btn3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="7시간"
+                    android:textColor="#000000"/>
+                <RadioButton
+                    android:id="@+id/radio_sleep_btn4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="8시간 이상"
+                    android:textColor="#000000"/>
+            </RadioGroup>
+        </LinearLayout>
+        <Button
+            android:id="@+id/goal_set_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="설정하기"/>
     </LinearLayout>
 </LinearLayout>
