--- a/TermProject/app/src/main/res/layout/activity_main.xml
+++ b/TermProject/app/src/main/res/layout/activity_main.xml
@@ -32,27 +32,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:background="@drawable/drawp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="하루치 목표량 : "
+                    android:padding="10dp"
+                    android:text="오늘의 목표량 : "
                     android:textSize="15dp"
-                    android:textColor="#101010"
+                    android:textColor="#de3e3e"
+                    android:textStyle="bold"
                     android:gravity="center_vertical"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
                 <TextView
+                    android:id="@+id/goal_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="일주일 목표량 : "
-                    android:textSize="15dp"
-                    android:textColor="#101010"
-                    android:gravity="center_vertical"/>
+                    android:text="오늘의 목표를 설정해 주세요"
+                    android:gravity="center"
+                    android:textColor="#de3e3e"
+                    android:textStyle="bold"/>
             </LinearLayout>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,16 +61,16 @@
             android:layout_weight="5">
             <ImageView
                 android:id="@+id/goal_set_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/goall"
-                android:layout_weight="1"
+                android:src="@mipmap/main_goal_setting"
+                android:layout_weight="7"
                 />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="목표량 설정하기"
-                android:textSize="8dp"
+                android:textSize="5dp"
                 android:textColor="#020202"
                 android:gravity="center"
                 android:layout_weight="1"
@@ -101,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:src="@mipmap/main_record"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -121,6 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:src="@mipmap/main_statistic"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -147,6 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:src="@mipmap/main_show"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -167,6 +170,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:src="@mipmap/main_init"
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -182,7 +186,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="20dp"
         android:background="#ceb0e7">
         <TextView
             android:layout_width="match_parent"
@@ -190,8 +194,8 @@
             android:gravity="center"
             android:text="20133266 차민준 My Logger"
             android:textColor="#000000"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textSize="10dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
