--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="보여주기"
+            android:text="행적 보여주기"
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"/>
