--- a/TermProject/app/src/main/res/layout/activity_record.xml
+++ b/TermProject/app/src/main/res/layout/activity_record.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="목표 설정"
+            android:text="기록하기"
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"/>
