--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -15,17 +15,83 @@
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"/>
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_weight="1">
-
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="50dp"
+        android:layout_weight="3"
+        android:orientation="horizontal">
+            <CalendarView
+                android:id="@+id/calView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:unfocusedMonthDateColor="#ebff030f"
+                android:focusedMonthDateColor="#000000"
+                android:weekSeparatorLineColor="#ebff030f"
+                android:selectedWeekBackgroundColor="#f9ef34"
+                android:selectedDateVerticalBar="@drawable/calendar"
+                android:clickable="false"
+                />
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5">
+        <TextView
+            android:id="@+id/caltext"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text=""
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:gravity="center"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:gravity="center">
+        <Button
+            android:id="@+id/query_btn_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@drawable/button"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="한 일"
+            android:textSize="20dp"
+            android:textColor="#76a3d9"
+            android:onClick="qOnclick"
+            />
+        <Button
+            android:id="@+id/query_btn_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@drawable/button"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="이벤트"
+            android:textSize="20dp"
+            android:textColor="#76a3d9"
+            android:onClick="qOnclick"/>
     </LinearLayout>
 
 
