--- a/TermProject/app/src/main/res/layout/activity_statistic.xml
+++ b/TermProject/app/src/main/res/layout/activity_statistic.xml
@@ -17,6 +17,7 @@
             android:textStyle="bold"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +25,19 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="1">
-
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/bar_chart_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            />
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/bar_chart_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            />
     </LinearLayout>
 </LinearLayout>
