--- a/TermProject/app/src/main/res/layout/activity_splash.xml
+++ b/TermProject/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#b88ada">
+    android:background="#e7e2ea"
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:src="@mipmap/logo" />
+        android:src="@mipmap/logo2" />
 
     <ProgressBar
         android:id="@+id/ProgressBar"
