--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -56,42 +56,88 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
+        android:orientation="vertical"
         android:gravity="center">
-        <Button
-            android:id="@+id/query_btn_1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginRight="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@drawable/button"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="한 일"
-            android:textSize="20dp"
-            android:textColor="#76a3d9"
-            android:onClick="qOnclick"
-            />
-        <Button
-            android:id="@+id/query_btn_2"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/query_btn_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="한 일(맵)"
+                android:textSize="10dp"
+                android:textColor="#76a3d9"
+                android:onClick="qOnclick"
+                />
+            <Button
+                android:id="@+id/query_btn_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="이벤트(맵)"
+                android:textSize="10dp"
+                android:textColor="#76a3d9"
+                android:onClick="qOnclick"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@drawable/button"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="이벤트"
-            android:textSize="20dp"
-            android:textColor="#76a3d9"
-            android:onClick="qOnclick"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/query_btn_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="한 일(리스트 뷰)"
+                android:textSize="10dp"
+                android:textColor="#76a3d9"
+                android:onClick="qOnclick"
+                />
+            <Button
+                android:id="@+id/query_btn_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="이벤트(리스트 뷰)"
+                android:textSize="10dp"
+                android:textColor="#76a3d9"
+                android:onClick="qOnclick"/>
+        </LinearLayout>
     </LinearLayout>
 
 
