9th Version reviewboard 참고(12.02)

--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -137,6 +137,23 @@
                 android:textSize="10dp"
                 android:textColor="#76a3d9"
                 android:onClick="qOnclick"/>
+            <Button
+                android:id="@+id/weather"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="이벤트(리스트 뷰)"
+                android:textSize="10dp"
+                android:textColor="#76a3d9"
+                />
         </LinearLayout>
     </LinearLayout>
 
