--- a/TermProject/app/src/main/res/layout/activity_show_weather.xml
+++ b/TermProject/app/src/main/res/layout/activity_show_weather.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/shortWeather"
+        android:id="@+id/show_weather_textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
