--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -14,7 +14,29 @@
             android:text="행적 보여주기"
             android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_weight="1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/weather"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/sunny"
+                android:onClick="weatherClick"
+                android:layout_weight="1"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:text="오늘의 날씨"
+                android:textSize="5dp"
+                android:textColor="#000000"
+                android:gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -137,23 +159,6 @@
                 android:textSize="10dp"
                 android:textColor="#76a3d9"
                 android:onClick="qOnclick"/>
-            <Button
-                android:id="@+id/weather"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="5dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="@drawable/button"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:text="날씨"
-                android:textSize="10dp"
-                android:textColor="#76a3d9"
-                />
         </LinearLayout>
     </LinearLayout>
 
