--- a/TermProject/app/src/main/res/layout/activity_record_1.xml
+++ b/TermProject/app/src/main/res/layout/activity_record_1.xml
@@ -28,6 +28,9 @@
             android:entries="@array/category"
             />
     </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -52,5 +55,6 @@
             android:gravity="start"
             android:textColor="#000000"/>
     </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
