--- a/TermProject/app/src/main/res/layout/activity_main.xml
+++ b/TermProject/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/back">
+    android:background="#f2efef">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ceb0e7">
+        android:background="#7ee7b6">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="MAIN"
-            android:textColor="#000000"
+            android:textColor="#f9f9f7"
             android:textSize="20dp"
             android:textStyle="bold"/>
     </LinearLayout>
@@ -40,7 +40,7 @@
                     android:padding="10dp"
                     android:text="오늘의 목표량 : "
                     android:textSize="15dp"
-                    android:textColor="#de3e3e"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:gravity="center_vertical"/>
                 <TextView
@@ -49,7 +49,7 @@
                     android:layout_height="match_parent"
                     android:text="오늘의 목표를 설정해 주세요"
                     android:gravity="center"
-                    android:textColor="#de3e3e"
+                    android:textColor="#000000"
                     android:textStyle="bold"/>
             </LinearLayout>
 
@@ -187,13 +187,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="#ceb0e7">
+        android:background="#7ee7b6">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="20133266 차민준 My Logger"
-            android:textColor="#000000"
+            android:textColor="#f9f8f8"
             android:textSize="10dp"
             />
     </LinearLayout>
