--- a/TermProject/app/src/main/res/layout/activity_query.xml
+++ b/TermProject/app/src/main/res/layout/activity_query.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/back">
+    android:background="#ffffff">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ceb0e7">
+        android:background="#7ee7b6">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="행적 보여주기"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
