--- a/TermProject/app/src/main/res/layout/activity_query_list2.xml
+++ b/TermProject/app/src/main/res/layout/activity_query_list2.xml
@@ -7,8 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="이벤트 리스트 뷰"
-        android:textColor="#000000"
-        android:background="#ceb0e7"
+        android:textColor="#ffffff"
+        android:background="#7ee7b6"
         android:gravity="center"/>
     <ListView
         android:id="@+id/query_List2"
