--- a/TermProject/app/src/main/res/layout/activity_record.xml
+++ b/TermProject/app/src/main/res/layout/activity_record.xml
@@ -7,14 +7,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ceb0e7"
+        android:background="#7ee7b6"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="     기록하기"
-            android:textColor="#000000"
+            android:text="기록하기"
+            android:textColor="#ffffff"
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
@@ -24,16 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_weight="5"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="10dp"
-
-        >
+        android:layout_marginTop="10dp">
         <ImageView
             android:id="@+id/imgstart"
             android:layout_width="match_parent"
