--- a/TermProject/app/src/main/res/layout/activity_show_weather.xml
+++ b/TermProject/app/src/main/res/layout/activity_show_weather.xml
@@ -20,13 +20,77 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/show_weather_textview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="#000000"
-            android:gravity="center"/>
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:background="#dec5a8">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:text="오늘"
+                android:textSize="30dp"
+                android:textColor="#000000"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/show_weather_textview_today"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#000000"
+                android:layout_weight="1"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:background="#a8c1de">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:text="내일"
+               android:textSize="30dp"
+                android:textColor="#000000"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/show_weather_textview_tomorrow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#000000"
+                android:layout_weight="1"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:background="#dea8d1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:text="모레"
+                android:textSize="30dp"
+                android:textColor="#000000"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/show_weather_textview_next_tomorrow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#000000"
+                android:layout_weight="1"
+                android:layout_marginLeft="15dp"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
